--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,6 @@ button:nth-of-type(1){
     margin-top: 20px;
     position: relative;
 }
-
 .grade-table{
     display: flex;
     width: 50%;
@@ -75,4 +74,32 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
+}
+
+
+
+@media (max-width: 500px) {
+    .title{
+        font-size: 12px;
+    }
+    button:nth-of-type(2){
+        left: 20%;
+    }
+    button:nth-of-type(1){
+        right: 20%;
+    }
+    .title{
+        margin-top: 2em;
+        margin-bottom: 3em;
+    }
+    .grade-labels, .grade-table{
+        width: 90%;
+        font-size: 10px;
+        text-transform: none;
+    }
+    input{
+        width: 100%;
+        font-size: 10px;
+        padding: 3px 5px;
+    }
 }
