--- a/styles.css
+++ b/styles.css
@@ -110,4 +110,7 @@ input::-webkit-inner-spin-button {
         font-size: 10px;
         padding: 3px 5px;
     }
+    #finalConversion, #totalUnits, #gradeAverage, #gradeConverted{
+        font-size: 14px;
+    }
 }
